# Stock-buyer-microservices

./: .gitignore  README.md
aum_server/: .dockerignore  README.md  docker-compose.yaml
aum_server/backend/: Makefile  pyproject.toml
aum_server/backend/src/: celery.py  constants.py  controller_server_endpoints.py  settings.py
aum_server/backend/src/accounts/: account_split_data.py
aum_server/backend/src/accounts/tests/: test_account_split_data.py
aum_server/backend/src/accounts_split/: accounts.py  constants.py  tasks.py
aum_server/backend/src/accounts_split/tests/: test_account_split_data.py  test_tasks.py
aum_server/backend/src/periodic_tasks/: tasks.py
aum_server/backend/src/periodic_tasks/tests/: test_tasks.py
aum_server/backend/src/tests/: test_account_split_data.py
aum_server/config/docker/backend/: Dockerfile
aum_server/config/environment_variables/: .env
controller_server/: README.md  docker-compose.yaml
controller_server/backend/: pyproject.toml
controller_server/backend/src/: main.py  redis.py
controller_server/backend/src/api/: authorize.py  schemas.py
controller_server/backend/src/api/api_v1/: api.py  authorize.py
controller_server/backend/src/api/api_v1/endpoints/: __init__.py  account_split.py  fills.py
controller_server/backend/src/api/api_v1/endpoints/tests/: test_account_split.py
controller_server/backend/src/api/api_v1/tests/endpoints/: test_account_split.py
controller_server/backend/src/api/tests/: test_authorize.py  test_schemas.py
controller_server/backend/src/api/tests/api_v1/: test_api.py
controller_server/backend/src/api/tests/api_v1/endpoints/: test_account_split.py  test_fills.py
controller_server/backend/src/core/: config.py  logger.py
controller_server/backend/src/orders/: stock_order.py  tasks.py
controller_server/backend/src/orders/tests/: test_stock_order.py  test_tasks.py
controller_server/config/environment_variables/: .env
fill_server/: README.md  docker-compose.yaml
fill_server/backend/: pyproject.toml
fill_server/backend/src/: celery.py  constants.py  fills.py  settings.py
fill_server/backend/src/fills/: constants.py  fills.py
fill_server/backend/src/fills/tests/: test_fills.py
fill_server/backend/src/tasks/: fills_tasks.py
fill_server/backend/src/tasks/tests/: test_fills_tasks.py
fill_server/backend/src/tests/: test_fills.py  test_tasks.py
reporter/: .gitignore  README.md  docker-compose.yaml
reporter/backend/: Makefile  app.py  pyproject.toml
reporter/backend/src/: __init__.py  app.py  celery_app.py  commands.py  commands_development.py  config.py  conftest.py  manage.py  run.py
reporter/backend/src/api/: __init__.py  security.py
reporter/backend/src/api/tests/: conftest.py  test_security.py
reporter/backend/src/api/tests/v1/: test_routes.py  test_stock.py  test_tasks.py
reporter/backend/src/api/v1/: __init__.py  routes.py  schemas.py  stock.py  tasks.py  typing.py
reporter/backend/src/celery/: __init__.py
reporter/backend/src/developmnent_utils/: __init__.py  commands.py
reporter/backend/src/static/js/: main.js
reporter/backend/src/static/styles/: style.css
reporter/backend/src/templates/: base.html  messages.html  navbar.html
reporter/backend/src/trades/: __init__.py  enums.py  forms.py  models.py  routes.py  signals.py  view.py  view_base.py
reporter/backend/src/trades/static/js/: main.js
reporter/backend/src/trades/static/styles/: style.css
reporter/backend/src/trades/templates/: base.html  home.html  login.html  register.html  stocks.html
reporter/backend/src/trades/templates/components/: navbar.html
reporter/backend/src/trades/templates/includes/: modal_form_buy.html  modal_form_sell.html
reporter/backend/src/trades/tests/: conftest.py  factories.py  test_forms.py  test_routes.py  test_signals.py
reporter/backend/src/trades/tests/views/: test_view_base.py
reporter/backend/src/users/: __init__.py  enums.py  forms.py  models.py  routes.py  signals.py  view.py
reporter/backend/src/users/templates/: home.html  login.html  profile.html  register.html
reporter/backend/src/users/tests/: conftest.py  factories.py  test_forms.py  test_models.py  test_routes.py  test_signals.py
reporter/backend/src/users/tests/routes/: test_home_page.py  test_load_user.py  test_login_page.py  test_logout_page.py  test_profile_page.py  test_register_page.py
reporter/backend/src/users/tests/views/: test_login_view.py  test_profile_view.py  test_register_view.py
reporter/backend/src/utils/: models_mixins.py  type_parsers.py  typing.py  view_utils.py
reporter/backend/src/utils/tests/: test_models_mixins.py  test_type_parsers.py  test_view_utils.py
reporter/config/docker/backend/: Dockerfile
reporter/config/docker/backend/app/: start.sh
reporter/config/environment_variables/: .env.dev
stock_screener/: .dockerignore  README.md  docker-compose.yaml
stock_screener/backend/: pyproject.toml
stock_screener/backend/src/: conftest.py  main.py
stock_screener/backend/src/api/tests/v1/: test_stocks.py
stock_screener/backend/src/api/v1/: __init__.py  stocks.py
stock_screener/backend/src/core/: celery_app.py  config.py  external_services_endpoints.py
stock_screener/backend/src/schemas/: __init__.py  stock.py
stock_screener/backend/src/stocks/: constants.py  stock.py  tasks.py
stock_screener/backend/src/stocks/tests/: test_stock.py  test_tasks.py
stock_screener/config/docker/backend/: Dockerfile
stock_screener/config/docker/backend/app/: start.sh
stock_screener/config/docker/backend/celery/beat/: start.sh
stock_screener/config/docker/backend/celery/worker/: start.sh
stock_screener/config/environment_variables/: .env.dev
