[tool.poetry]
name = "aum_server"
version = "0.1.0"
description = ""
authors = ["Marek Chałabis"]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.21.3"
numpy = "^1.22.0"
celery = "^5.2.3"
redis = "^4.1.0"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-mock = "3.6.1"
pytest-cov = "^3.0.0"
pytest-xdist = "^2.5.0"
flake8 = "^4.0.1"
flake8-coding = "^1.3.2"
flake8-quotes = "^3.3.1"
flake8-isort = "^4.1.1"
coverage = "^6.2"
pyproject-flake8 ="^0.0.1a2"
safety = "^1.10.3"
black = { version = "^21.12b0", allow-prereleases = true}

[tool.coverage.run]
branch = true
source = ["./"]
# skip files for coverage
omit = ["tests*",]
data_file = ".tests_reports/.coverage"

[tool.coverage.report]
skip_covered = true
show_missing = true
sort = "Cover"
fail_under = 80

[tool.flake8]
allowed-domain-names="item"
show-source = "True"
statistics = "True"
doctests = "True"
enable-extensions = "G"
max-imports = "15"
max-line-length = "88"
max-methods = "10"
max-module-members = "10"

# Flake plugins:
accept-encodings = "utf-8"
inline-quotes = "single"
isort-show-traceback = "True"
# C101: Coding magic comment not found
# W503:  line break before binary operator
ignore = "C101,W503,"
exclude = ".git,"

[tool.isort]
line_length = 88
indent = 4
include_trailing_comma = true
use_parentheses = true
multi_line_output = 3
lines_between_types = 1
force_grid_wrap = 2

# add darker if project expand
[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310']
skip-string-normalization = true
isort = true

[build-system]
requires = ["poetry>=1.1.12"]
build-backend = "poetry.masonry.api"

